Chart based on user input. Edit meal. Sort goal by action.

--- a/VAKidney/app/src/main/res/layout/fragment_home1.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_home1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.topcoder.vakidney.MainFragments.HomeFragments.Home1Fragment">
+    tools:context="com.topcoder.vakidney.MainFragments.home.Home1Fragment">
 
 
     <LinearLayout
