--- a/VAKidney/app/src/main/res/layout/fragment_blood_sugar.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_blood_sugar.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/app_standard_padding"
     android:background="@color/colorLightGray"
-    tools:context="com.topcoder.vakidney.MainFragments.ChartFragments.BloodSugarFragment">
+    tools:context="com.topcoder.vakidney.MainFragments.charts.BloodSugarFragment">
 
 
     <RelativeLayout
