--- a/VAKidney/app/src/main/res/layout/fragment_food.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_food.xml
@@ -3,9 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorLightGray"
-    android:padding="@dimen/app_standard_padding"
+    android:paddingLeft="@dimen/app_standard_padding"
+    android:paddingRight="@dimen/app_standard_padding"
     tools:context="com.topcoder.vakidney.MainFragments.FoodFragment">
-
 
     <GridView
         android:layout_width="match_parent"
@@ -15,6 +15,8 @@
         android:horizontalSpacing="@dimen/app_standard_padding"
         android:verticalSpacing="@dimen/app_standard_padding"
         android:id="@+id/gridView"
-        ></GridView>
+        android:clipToPadding="false"
+        android:paddingTop="@dimen/app_standard_padding"
+        android:paddingBottom="@dimen/app_standard_padding" />
 
 </RelativeLayout>
