--- a/VAKidney/app/src/main/res/layout/item_grid_goal.xml
+++ b/VAKidney/app/src/main/res/layout/item_grid_goal.xml
@@ -34,7 +34,6 @@
             android:gravity="center"
             android:orientation="horizontal">
 
-
             <TextView
                 android:id="@+id/tvCurrentGoals"
                 android:layout_width="wrap_content"
@@ -49,7 +48,7 @@
                 android:id="@+id/tvGoalUnit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/app_standard_padding"
+                android:layout_marginLeft="4dp"
                 android:gravity="center"
                 android:text="Steps"
                 android:textColor="@color/colorDarkGray"
