--- a/VAKidney/app/src/main/res/layout/item_medicationresource_titledesc.xml
+++ b/VAKidney/app/src/main/res/layout/item_medicationresource_titledesc.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_ripple_white"
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?android:attr/selectableItemBackground"
     android:paddingLeft="@dimen/app_standard_padding"
     android:paddingRight="@dimen/app_standard_padding"
-    android:background="@color/colorWhite"
     android:orientation="vertical">
-
 
     <LinearLayout
         android:layout_width="match_parent"
