--- a/VAKidney/app/src/main/res/layout/activity_chart.xml
+++ b/VAKidney/app/src/main/res/layout/activity_chart.xml
@@ -49,6 +49,7 @@
     </RelativeLayout>
 
     <LinearLayout
+        android:id="@+id/llActual"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -71,6 +72,46 @@
             android:textColor="@color/text_black"
             android:textSize="14sp"
             android:text="Actual" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_below="@id/llActual"
+        android:layout_alignParentRight="true"
+        android:gravity="center">
+
+        <View
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ic_oval_green" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/text_black"
+            android:textSize="14sp"
+            android:text="Minimum" />
+        <View
+            android:layout_width="12dp"
+            android:layout_height="12dp"
+            android:layout_marginLeft="10dp"
+            android:background="@drawable/ic_oval_red" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:textColor="@color/text_black"
+            android:textSize="14sp"
+            android:text="Maximum" />
 
     </LinearLayout>
 
