--- a/VAKidney/app/src/main/res/layout/item_chart_menu.xml
+++ b/VAKidney/app/src/main/res/layout/item_chart_menu.xml
@@ -11,13 +11,33 @@
     android:paddingRight="@dimen/app_standard_padding"
     android:orientation="vertical">
 
+    <LinearLayout
+        android:id="@+id/layout_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:visibility="gone">
+        <TextView
+            android:id="@+id/text_header"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:textColor="@color/text_black"
+            android:text="Major"/>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorLightGray"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/text_label"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="40dp"
         android:gravity="center_vertical"
         android:textSize="16sp"
-        android:textStyle="bold"
         android:textColor="@color/text_black"
         android:text="Creatinine"/>
     <View
