--- a/VAKidney/app/src/main/res/layout/activity_resources_detail.xml
+++ b/VAKidney/app/src/main/res/layout/activity_resources_detail.xml
@@ -82,6 +82,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="left"
+                    android:autoLink="web"
                     android:text="@string/nutrition_detail"
                     android:textColor="#666666"
                     android:textSize="13dp" />
