--- a/VAKidney/app/src/main/res/layout/fragment_resource.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_resource.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.resources.ResourceFragment">
+    tools:context=".fragments.resources.ReadMoreFragment">
 
     <ListView
         android:layout_width="match_parent"
