Change style color and icon.

--- a/VAKidney/app/src/main/res/drawable/bg_login_btn.xml
+++ b/VAKidney/app/src/main/res/drawable/bg_login_btn.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
     <corners android:radius="@dimen/app_standard_corner_width"/>
-    <solid android:color="#003f72"/>
+    <solid android:color="@color/colorPrimaryDark"/>
 </shape>
