--- a/VAKidney/app/src/main/res/layout/activity_chart.xml
+++ b/VAKidney/app/src/main/res/layout/activity_chart.xml
@@ -202,217 +202,11 @@
         android:layout_centerVertical="true"
         android:layout_height="310dp" />
 
-
-    <LinearLayout
+    <com.topcoder.vakidney.customview.BottomMenu
         android:id="@+id/bottomBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:weightSum="5.3"
-        >
-
-    <LinearLayout
-        android:id="@+id/barLin1"
-        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        >
+        android:layout_width="match_parent"/>
 
-        <LinearLayout
-            android:id="@+id/bar1"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimary"
-            />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/barImg1"
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_bar_home" />
-
-        <TextView
-            android:id="@+id/tvBar1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="Home"
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/barLin2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        >
-
-        <LinearLayout
-            android:id="@+id/bar2"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimary"
-            />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/barImg2"
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:tint="@color/colorWhite"
-            app:srcCompat="@drawable/ic_bar_chart" />
-
-        <TextView
-            android:id="@+id/tvBar2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="Chart"
-            android:textColor="@color/colorWhite"
-            android:textSize="10sp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/barLin3"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1.3"
-        android:gravity="center"
-        >
-
-        <LinearLayout
-            android:id="@+id/bar3"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimary"
-            />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/barImg3"
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/tab3" />
-
-        <TextView
-            android:id="@+id/tvBar3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="Recommendations"
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/barLin4"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        >
-
-        <LinearLayout
-            android:id="@+id/bar4"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimary"
-            />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/barImg4"
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_bar_food" />
-
-        <TextView
-            android:id="@+id/tvBar4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="Food/Drug"
-
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/barLin5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_weight="1"
-        android:gravity="center"
-        >
-
-        <LinearLayout
-            android:id="@+id/bar5"
-            android:layout_width="match_parent"
-            android:layout_height="3dp"
-            android:orientation="horizontal"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:background="@color/colorPrimary"
-
-            />
-
-        <android.support.v7.widget.AppCompatImageView
-            android:id="@+id/barImg5"
-            android:layout_width="35dp"
-            android:layout_height="20dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
-            android:tint="@color/colorAccent"
-            app:srcCompat="@drawable/ic_bar_workout" />
-
-        <TextView
-            android:id="@+id/tvBar5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:gravity="center"
-            android:text="Activity"
-            android:textColor="@color/colorAccent"
-            android:textSize="10sp" />
-    </LinearLayout>
-    </LinearLayout>
 </RelativeLayout>
 </layout>
