--- a/VAKidney/app/src/main/res/layout/fragment_my_profile.xml
+++ b/VAKidney/app/src/main/res/layout/fragment_my_profile.xml
@@ -23,7 +23,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#CC003f72"
+            android:background="@color/brandBlue"
+            android:alpha="0.5"
             ></LinearLayout>
     </RelativeLayout>
 
